--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,7 @@ dependencies:
   dio: ^5.2.1+1
 
   # local storage
-  get_storage: ^2.1.1
-
-  # internet connection
-  internet_connection_checker: ^1.0.0+1
+  hive_flutter: ^1.1.0
 
   # internet connection
   connectivity_plus: ^4.0.1
@@ -41,6 +38,16 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
 
+  # in app review package 
+  in_app_review: ^2.0.9
+  # loading spinner package
+  flutter_easyloading: ^3.0.5
+  # responsive package
+  flutter_screenutil: 5.9.3
+  # svg image package
+  flutter_svg: ^2.0.10+1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -48,9 +55,68 @@ dev_dependencies:
   build_runner: ^2.4.5
   flutter_lints: ^2.0.1
   json_serializable: ^6.7.0
+  # Asset generation
+  flutter_gen: ^5.4.0
+  flutter_gen_runner:
+  # native splash screen
+  flutter_native_splash: ^2.4.0
+  # app icon
+  flutter_launcher_icons: ^0.13.1
+  # cache model generator
+  hive_generator: ^2.0.1
+  # package name change
+  #package_rename: ^1.6.0
+
 
 
 flutter:
   uses-material-design: true
   generate: true
-  
+  assets:
+    - assets/icons/
+    - assets/images/
+
+flutter_gen:
+  output: lib/src/core/assets_gen/
+  line_length: 80
+
+  integrations:
+    flutter_svg: true
+    lottie: true
+    # flare_flutter: true
+    # rive: true
+
+
+flutter_native_splash:
+  color: "#D93B6A"
+  image: "assets/images/app_logo.png"
+  android: true
+  ios: true
+  android_gravity: center
+  ios_content_mode: center
+  fullscreen: true
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/app_logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+
+package_rename_config:
+  android:
+    app_name: New App Name
+    package_name: com.new.app
+    override_old_package: com.old.app
+  ios:
+    app_name: # (String) The display name of the ios app
+    bundle_name: # (String) The bundle name of the ios app
+    package_name: # (String) The product bundle identifier of the ios app
+
+
+flutter_intl:
+  enabled: true
+  arb_dir: lib/src/core/services/language/languages  # l10n.dart dosyasının yolunun belirtildiği kısım
+  template-arb-file: intl_en.arb # Örnek alınacak dil dosyasının adı
+  output-localization-file: app_localizations.dart # dosyalar oluşturulduktan sonra .dart_tool/flutter_gen/gen_l10n dosyasının altında oluşacak dosyanın ismi
+  output_dir: lib/src/core/services/language/languages
